k8s/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personalpodcast-backend
  namespace: personalpodcast
  labels:
    app: personalpodcast-backend
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: personalpodcast-backend
  template:
    metadata:
      labels:
        app: personalpodcast-backend
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: api
          image: personalpodcast.azurecr.io/personalpodcast-backend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /health
              port: 8080
            failureThreshold: 30
            periodSeconds: 5

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: personalpodcast
spec:
  selector:
    app: personalpodcast-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
