k8s/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: personalpodcast-frontend
  namespace: personalpodcast
spec:
  replicas: 2
  selector:
    matchLabels:
      app: personalpodcast-frontend
  template:
    metadata:
      labels:
        app: personalpodcast-frontend
    spec:
      containers:
        - name: web
          image: personalpodcast-frontend:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: personalpodcast
spec:
  selector:
    app: personalpodcast-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
